traefik-forward-auth/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - traefik-auth.naturalselectionlabs.com
      secretName: traefik-forward-auth-tls
  rules:
    - host: traefik-auth.naturalselectionlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 4181
